--- a/package.json
+++ b/package.json
@@ -19,5 +19,11 @@
     "gulp-sass": "^0.7.2",
     "gulp-jshint": "~1.3.4",
     "jshint-stylish": "http://github.com/markdurrant/jshint-stylish/tarball/master"
+  },
+  "dependencies": {
+    "body-parser": "^1.10.0",
+    "express": "^4.10.4",
+    "node-sass": "^1.2.3",
+    "node-sass-middleware": "^0.4.0"
   }
 }
