--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "body-parser": "^1.10.0",
     "express": "^4.10.4",
+    "ngrok": "^0.1.98",
     "node-sass": "^1.2.3",
     "node-sass-middleware": "^0.4.0"
   }
