--- a/package.json
+++ b/package.json
@@ -8,21 +8,19 @@
     "url": ""
   },
   "scripts": {
-    "install": "gulp sass"
+    "install": "node_modules/gulp/bin/gulp.js sass"
   },
-  "devDependencies": {
+  "dependencies": {
+    "body-parser": "^1.10.0",
     "connect": "~2.17.1",
     "connect-livereload": "~0.4.0",
+    "express": "^4.10.4",
     "gulp": "^3.7.0",
     "gulp-autoprefixer": "0.0.7",
     "gulp-livereload": "~1.5.0",
     "gulp-sass": "^0.7.2",
     "gulp-jshint": "~1.3.4",
-    "jshint-stylish": "http://github.com/markdurrant/jshint-stylish/tarball/master"
-  },
-  "dependencies": {
-    "body-parser": "^1.10.0",
-    "express": "^4.10.4",
+    "jshint-stylish": "http://github.com/markdurrant/jshint-stylish/tarball/master",
     "ngrok": "^0.1.98",
     "node-sass": "^1.2.3",
     "node-sass-middleware": "^0.4.0"
